--- a/config/w3s_scripts/tbMenuManager.yml
+++ b/config/w3s_scripts/tbMenuManager.yml
@@ -1,4 +1,5 @@
 button1:
+  id: aaa
   image: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/user.png
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/user_disabled.png
   caption: Users
