03-10-2009 Giansimon Diblas: Redesigned signin module.
git-svn-id: file:///home/wik/repos/w3srepo/sfW3studioCmsPlugin/1.2/trunk@70 c6a47aa4-7d28-49a2-9282-aebedf263cad

--- a/config/w3s_scripts/TemplateFrontendDefaultCSS.yml
+++ b/config/w3s_scripts/TemplateFrontendDefaultCSS.yml
@@ -1,4 +1,4 @@
-0: <?php echo sfConfig::get('app_w3s_web_skin_dir')?>/signin.css
+0: <?php echo sfConfig::get('app_w3s_web_skin_dir')?>/w3s_signin.css
 1: <?php echo sfConfig::get('app_w3s_web_skin_dir')?>/w3s_common_elements.css
 2: <?php echo sfConfig::get('app_w3s_web_window_skin_dir') ?>/default.css
 3: <?php echo sfConfig::get('app_w3s_web_window_skin_dir')?>/alphacube.css
