03-28-2009 Giansimon Diblas: Module slot associations.
git-svn-id: file:///home/wik/repos/w3srepo/sfW3studioCmsPlugin/1.2/branches/sfW3studioCmsPlugin_0.9.0@80 c6a47aa4-7d28-49a2-9282-aebedf263cad

--- a/config/w3s_scripts/tbMenuManager.yml
+++ b/config/w3s_scripts/tbMenuManager.yml
@@ -19,7 +19,7 @@ button8:
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project_disabled.png
   caption: Associations
   requiredCredentials: [[admin, webdesigner]]
-  action: W3sSlotAssociation = new w3sSlotAssociation(); W3sSlotAssociation.loadSlotAssociation(1, 19);
+  action: W3sSlotMapper = new w3sSlotMapper(1, 19, '<?php echo sfConfig::get("app_w3s_web_skin_images_dir")?>'); W3sSlotMapper.loadSlotMapper();
   actionParams:
     title: Associate slots between templates
 button3:
