--- a/config/w3s_scripts/tbSlotMapper.yml
+++ b/config/w3s_scripts/tbSlotMapper.yml
@@ -3,7 +3,7 @@ button1:
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/user_disabled.png
   caption: Switch to source
   requiredCredentials: [[admin, webdesigner]]
-  action: W3sSlotAssociation.switchDiv();
+  action: W3sSlotMapper.switchDiv();
   #$('w3s_cms').show();$('w3s_cms_temp').hide();
   actionParams:
     title: Manage the users, groups and relative permissions
@@ -12,14 +12,14 @@ button2:
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project_disabled.png
   caption: Projects  
   requiredCredentials: [[admin, webdesigner]]
-  #action: if($('w3s_cms_temp').innerHTML == ''){W3sTemplate.loadSlotAssociation(19, 'w3s_cms_temp');} W3sSlotAssociation.switchDiv(); //$('w3s_cms_temp').show();$('w3s_cms').hide();
+  #action: if($('w3s_cms_temp').innerHTML == ''){W3sTemplate.loadSlotMapper(19, 'w3s_cms_temp');} W3sSlotMapper.switchDiv(); //$('w3s_cms_temp').show();$('w3s_cms').hide();
   actionParams:
     title: Import your own templates project or one downloaded from W3StudioCMS website
 button3:
   image: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project.png
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project_disabled.png
-  caption: Associations
+  caption: Mappers
   requiredCredentials: [[admin, webdesigner]]
-  action: W3sTemplate.loadSlotAssociation(19);
+  action: W3sTemplate.loadSlotMapper(19);
   actionParams:
     title: Associate slots between templates
