--- a/config/w3s_scripts/tbMenuManager.yml
+++ b/config/w3s_scripts/tbMenuManager.yml
@@ -11,7 +11,7 @@ button2:
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project_disabled.png
   caption: Projects  
   requiredCredentials: [[admin, webdesigner]]
-  action: W3sTemplateImport.show()
+  action: W3sThemeImport.show()
   actionParams:
     title: Import your own templates project or one downloaded from W3StudioCMS website
 #button8:
