--- a/config/w3s_scripts/tbMenuManagerMove.yml
+++ b/config/w3s_scripts/tbMenuManagerMove.yml
@@ -6,7 +6,7 @@ button1:
 button2:
   image: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project.png
   imageDisabled: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/project_disabled.png
-  caption: Projects  
+  caption: Themes
   enabled: false
 button3:
   image: <?php echo sfConfig::get('app_w3s_web_skin_images_dir')?>/w3s_menu_manager/structure.png
